--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -502,11 +502,11 @@ kyvernoPolicies:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/kyverno-policies.git
     path: ./chart
-    tag: "1.1.0-bb.9"
+    tag: "1.1.0-bb.10"
   helmRepo:
     repoName: "registry1"
     chartName: "kyverno-policies"
-    tag: "1.1.0-bb.9"
+    tag: "1.1.0-bb.10"
 
   # -- Flux reconciliation overrides specifically for the Kyverno Package
   flux: {}
@@ -527,11 +527,11 @@ kyvernoReporter:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/kyverno-reporter.git
     path: ./chart
-    tag: "2.16.0-bb.1"
+    tag: "2.16.0-bb.3"
   helmRepo:
     repoName: "registry1"
     chartName: "kyverno-reporter"
-    tag: "2.16.0-bb.1"
+    tag: "2.16.0-bb.3"
 
   # -- Flux reconciliation overrides specifically for the Kyverno Reporter Package
   flux: {}
@@ -683,11 +683,11 @@ loki:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/loki.git
     path: "./chart"
-    tag: "5.15.0-bb.0"
+    tag: "5.21.0-bb.1"
   helmRepo:
     repoName: "registry1"
     chartName: "loki"
-    tag: "5.15.0-bb.0"
+    tag: "5.21.0-bb.1"
 
   # -- Flux reconciliation overrides specifically for the Loki Package
   flux: {}
@@ -736,11 +736,11 @@ neuvector:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/neuvector.git
     path: "./chart"
-    tag: "2.4.5-bb.4"
+    tag: "2.4.5-bb.5"
   helmRepo:
     repoName: "registry1"
     chartName: "neuvector"
-    tag: "2.4.5-bb.4"
+    tag: "2.4.5-bb.5"
 
   # -- Redirect the package ingress to a specific Istio Gateway (listed in `istio.gateways`).  The default is "public".
   ingress:
@@ -748,7 +748,7 @@ neuvector:
 
   sso:
     # -- Toggle SSO for Neuvector on and off
-    enabled: true
+    enabled: false
 
     # -- OIDC Client ID to use for Neuvector
     client_id: ""
@@ -782,11 +782,11 @@ tempo:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/tempo.git
     path: "./chart"
-    tag: "1.2.0-bb.5"
+    tag: "1.6.1-bb.0"
   helmRepo:
     repoName: "registry1"
     chartName: "tempo"
-    tag: "1.2.0-bb.5"
+    tag: "1.6.1-bb.0"
 
   # -- Redirect the package ingress to a specific Istio Gateway (listed in `istio.gateways`).  The default is "public".
   ingress:
@@ -956,11 +956,11 @@ twistlock:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/twistlock.git
     path: "./chart"
-    tag: "0.12.0-bb.5"
+    tag: "0.13.0-bb.0"
   helmRepo:
     repoName: "registry1"
     chartName: "twistlock"
-    tag: "0.12.0-bb.5"
+    tag: "0.13.0-bb.0"
 
   # -- Flux reconciliation overrides specifically for the Twistlock Package
   flux: {}
@@ -1003,11 +1003,11 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/argocd.git
       path: "./chart"
-      tag: "5.42.2-bb.0"
+      tag: "5.45.2-bb.0"
     helmRepo:
       repoName: "registry1"
       chartName: "argocd"
-      tag: "5.42.2-bb.0"
+      tag: "5.45.2-bb.0"
 
     # -- Flux reconciliation overrides specifically for the ArgoCD Package
     flux: {}
@@ -1060,11 +1060,11 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/authservice.git
       path: "./chart"
-      tag: "0.5.3-bb.13"
+      tag: "0.5.3-bb.17"
     helmRepo:
       repoName: "registry1"
       chartName: "authservice"
-      tag: "0.5.3-bb.13"
+      tag: "0.5.3-bb.17"
 
     # -- Flux reconciliation overrides specifically for the Authservice Package
     flux: {}
@@ -1156,11 +1156,11 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/gitlab.git
       path: "./chart"
-      tag: "7.3.0-bb.1"
+      tag: "7.3.1-bb.0"
     helmRepo:
       repoName: "registry1"
       chartName: "gitlab"
-      tag: "7.3.0-bb.1"
+      tag: "7.3.1-bb.0"
 
     # -- Flux reconciliation overrides specifically for the Gitlab Package
     flux: {}
@@ -1262,11 +1262,11 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/gitlab-runner.git
       path: "./chart"
-      tag: "0.52.0-bb.3"
+      tag: "0.52.0-bb.4"
     helmRepo:
       repoName: "registry1"
       chartName: "gitlab-runner"
-      tag: "0.52.0-bb.3"
+      tag: "0.52.0-bb.4"
 
     # -- Flux reconciliation overrides specifically for the Gitlab Runner Package
     flux: {}
@@ -1406,6 +1406,45 @@ addons:
       password: ""
 
     # -- Values to passthrough to the sonarqube chart: https://repo1.dso.mil/big-bang/product/packages/sonarqube.git
+    values: {}
+
+    # -- Post Renderers.  See docs/postrenders.md
+    postRenderers: []
+
+  fortify:
+    # -- Toggle deployment of Fortify.
+    enabled: false
+
+    # -- Choose source type of "git" or "helmRepo"
+    sourceType: "git"
+
+    git:
+      repo: https://repo1.dso.mil/big-bang/product/packages/fortify.git
+      path: "./chart"
+      tag: "0.2.0-bb.14"
+    helmRepo:
+      repoName: "registry1"
+      chartName: "fortify"
+      tag: "0.2.0-bb.14"
+
+    # -- Flux reconciliation overrides specifically for the Fortify Package
+    flux: {}
+
+    # -- Redirect the package ingress to a specific Istio Gateway (listed in `istio.gateways`).  The default is "public".
+    ingress:
+      gateway: ""
+
+    sso:
+      # -- Toggle SSO for Harbor on and off
+      enabled: false
+
+      # -- OIDC Client ID to use for Harbor
+      client_id: ""
+
+      # -- OIDC Client Secret to use for Harbor
+      client_secret: ""
+
+    # -- Values to passthrough to the fortify chart: https://repo1.dso.mil/big-bang/product/packages/fortify.git
     values: {}
 
     # -- Post Renderers.  See docs/postrenders.md
@@ -1570,11 +1609,11 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/mattermost.git
       path: "./chart"
-      tag: "8.0.1-bb.1"
+      tag: "8.1.2-bb.0"
     helmRepo:
       repoName: "registry1"
       chartName: "mattermost"
-      tag: "8.0.1-bb.1"
+      tag: "8.1.2-bb.0"
 
     # -- Flux reconciliation overrides specifically for the Mattermost Package
     flux: {}
@@ -1664,11 +1703,11 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/velero.git
       path: "./chart"
-      tag: "4.0.3-bb.0"
+      tag: "4.0.3-bb.1"
     helmRepo:
       repoName: "registry1"
       chartName: "velero"
-      tag: "4.0.3-bb.0"
+      tag: "4.0.3-bb.1"
 
     # -- Flux reconciliation overrides specifically for the Velero Package
     flux: {}
@@ -1700,11 +1739,11 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/keycloak.git
       path: "./chart"
-      tag: "18.4.3-bb.3"
+      tag: "18.4.3-bb.4"
     helmRepo:
       repoName: "registry1"
       chartName: "keycloak"
-      tag: "18.4.3-bb.3"
+      tag: "18.4.3-bb.4"
 
     database:
       # -- Hostname of a pre-existing database to use for Keycloak.
@@ -1757,11 +1796,11 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/vault.git
       path: "./chart"
-      tag: "0.24.1-bb.3"
+      tag: "0.25.0-bb.0"
     helmRepo:
       repoName: "registry1"
       chartName: "vault"
-      tag: "0.24.1-bb.3"
+      tag: "0.25.0-bb.0"
       
     # -- Flux reconciliation overrides specifically for the Vault Package
     flux: {}
@@ -1945,3 +1984,4 @@ packages:
 
     # -- Values to pass through to package Helm chart
     values: {}
+
