--- a/tests/openshift-test-values.yaml
+++ b/tests/openshift-test-values.yaml
@@ -5,7 +5,11 @@ domain: bigbang.dev
 
 neuvector:
   enabled: true
-
+  values:
+    crio:
+      enabled: true
+      path: /var/run/crio/crio.sock
+     
 loki:
   enabled: true
 
@@ -16,7 +20,7 @@ tempo:
   enabled: true
 
 grafana:
-  enabled: false
+  enabled: true
 
 kyverno:
   enabled: false
@@ -28,13 +32,17 @@ kyvernoReporter:
   enabled: false
 
 monitoring:
-  enabled: false
+  enabled: true
+  
   git:
     tag: null
     branch: "master"
   values:
     alertmanager:
       enabled: true
+    
+    podSecurityPolicy:
+      enabled: false
 
     prometheusOperator:
       alertmanagerInstanceNamespaces: ['monitoring']
@@ -231,10 +239,10 @@ istio:
             maxReplicas: 5
 
 jaeger:
-  enabled: false
+  enabled: true
   git:
     tag: null
-    branch: "master"
+    branch: "main"
   values:
     jaeger:
       spec: 
