--- a/tests/openshift-test-values.yaml
+++ b/tests/openshift-test-values.yaml
@@ -4,7 +4,7 @@ domain: bigbang.dev
 #domain: ${DOMAIN_CHANGE_ME}
 
 neuvector:
-  enabled: false
+  enabled: true
   values:
     crio:
       enabled: true
