--- a/tests/openshift-test-values.yaml
+++ b/tests/openshift-test-values.yaml
@@ -4,7 +4,7 @@ domain: bigbang.dev
 #domain: ${DOMAIN_CHANGE_ME}
 
 neuvector:
-  enabled: false
+  enabled: true
   git:
     tag: null
     branch: "openshift-values"
@@ -385,7 +385,7 @@ addons:
 
 
   argocd:
-     enabled: false
+     enabled: true
      values:
        controller:
          resources:
@@ -427,6 +427,9 @@ addons:
 
   anchore:
     enabled: true
+    git:
+      tag: null
+      branch: "openshift-updates"
     values:
       ensureDbJobs:
         resources:
@@ -597,6 +600,9 @@ addons:
 
   authservice:
     enabled: false
+    git:
+      tag: null
+      branch: "openshift-updates"  
     values:
       resources:
         requests:
@@ -613,6 +619,9 @@ addons:
    
   gitlab:
     enabled: false
+    git:
+      tag: null
+      branch: "openshift-updates"
     flux:
       timeout: 30m
     values:
@@ -682,4 +691,4 @@ addons:
           memory: 128Mi
           cpu: 100m
         limits: null
- 
+        
