--- a/tests/openshift-test-values.yaml
+++ b/tests/openshift-test-values.yaml
@@ -4,7 +4,7 @@ domain: bigbang.dev
 #domain: ${DOMAIN_CHANGE_ME}
 
 neuvector:
-  enabled: true
+  enabled: false
   git:
     tag: null
     branch: "openshift-values"
@@ -574,6 +574,10 @@ addons:
             cpu: 100m
             memory: 200Mi
           limits: null
+      securityContext:
+        enabled: false
+      serviceAccount:
+        create: true
  
   minio:
     enabled: false
