--- a/tests/openshift-test-values.yaml
+++ b/tests/openshift-test-values.yaml
@@ -381,7 +381,7 @@ addons:
             cypress_vault_url: "https://vault.bigbang.dev"
 
   minioOperator:
-    enabled: false
+    enabled: true
 
 
   argocd:
@@ -622,10 +622,7 @@ addons:
             size: 256Mi
    
   gitlab:
-    enabled: false
-    git:
-      tag: null
-      branch: "openshift-updates"
+    enabled: true
     flux:
       timeout: 30m
     values:
@@ -696,3 +693,48 @@ addons:
           cpu: 100m
         limits: null
         
+  nexusRepositoryManager:
+    enabled: true
+    values:
+      persistence:
+        # Do NOT set this below 5Gi, nexus will fail to boot
+        storageSize: 5Gi
+      nexus:
+        resources:
+          requests:
+            cpu: 100m
+            memory: 1500Mi
+          limits: null
+
+  mattermost:
+    enabled: true
+    values:
+      postgresql:
+        persistence:
+          size: 256Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 256Mi
+        limits: null
+      minio:
+        tenants:
+          pools:
+          - servers: 1
+            volumesPerServer: 4
+            size: 256Mi
+            resources:
+              requests:
+                cpu: 250m
+                memory: 512Mi
+              limits: null
+            securityContext:
+              runAsUser: 1001
+              runAsGroup: 1001
+              fsGroup: 1001
+              runAsNonRoot: true
+            containerSecurityContext:
+              runAsUser: 1001
+              runAsGroup: 1001
+              runAsNonRoot: true
+
