--- a/tests/openshift-test-values.yaml
+++ b/tests/openshift-test-values.yaml
@@ -34,13 +34,13 @@ neuvector:
       path: /var/run/crio/crio.sock
      
 loki:
-  enabled: true
+  enabled: false
   git:
     tag: null
     branch: "openshift-updates"
 
 promtail:
-  enabled: true
+  enabled: false
   git:
     tag: null
     branch: "openshift-updates"  
