updating OS values

--- a/chart/templates/sonarqube/values.yaml
+++ b/chart/templates/sonarqube/values.yaml
@@ -13,6 +13,8 @@ domain: {{ $domainName }}
 OpenShift:
   enabled: {{ .Values.openshift }}
 
+openshift: {{ .Values.openshift }}
+
 istio:
   enabled: {{ .Values.istio.enabled }}
   sonarqube:
