--- a/tests/openshift-test-values.yaml
+++ b/tests/openshift-test-values.yaml
@@ -313,7 +313,7 @@ addons:
 
 
   vault:
-    enabled: false
+    enabled: true
     ingress:
       gateway: "passthrough"
       key: "" # Gets added via chart/ingress-certs.yaml
