--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -186,6 +186,7 @@ gatekeeper:
           - nexus-repository-manager/nexus-repository-manager-cypress-test
           - sonarqube/sonarqube-cypress-test
           - tempo/tempo-cypress-test
+          - thanos/thanos-cypress-test
           - twistlock/twistlock-cypress-test
           - vault/vault-cypress-test
           # Allow kyverno test vectors for Helm test
@@ -324,6 +325,7 @@ gatekeeper:
           - nexus-repository-manager/nexus-repository-manager-cypress-test
           - sonarqube/sonarqube-cypress-test
           - tempo/tempo-cypress-test
+          - thanos/thanos-cypress-test
           - twistlock/twistlock-cypress-test
           - vault/vault-cypress-test
           # Allow kyverno test vectors for Helm test
