--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1286,7 +1286,8 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/gitlab-runner.git
       path: "./chart"
-      tag: "0.59.1-bb.1"
+      #tag: "0.59.1-bb.1"
+      branch: "fix-cypress-tests"
     helmRepo:
       repoName: "registry1"
       chartName: "gitlab-runner"
