--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -457,7 +457,8 @@ gatekeeper:
   git:
     repo: https://repo1.dso.mil/big-bang/product/packages/policy.git
     path: "./chart"
-    tag: "3.14.0-bb.5"
+    #tag: "3.14.0-bb.5"
+    branch: "fix-security-context"
   helmRepo:
     repoName: "registry1"
     chartName: "gatekeeper"
